--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -17,4 +17,9 @@ REST几个关键点
 `Identification of resources`  
 `Manipulation of resources through these representations`  
 `Self-descriptive messages`  
-`Hypermedia as the engine of application state`  
+`Hypermedia as the engine of application state`
+###3.Rest希望实现的目标
+`Scalability of component interactions  
+Generality of interfaces  
+Independent deployment of components  
+Intermediary components to reduce latency, enforce security and encapsulate legacy systems`  
