--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -19,7 +19,11 @@ REST几个关键点
 `Self-descriptive messages`  
 `Hypermedia as the engine of application state`
 ###3.Rest希望实现的目标
-`Scalability of component interactions  
-Generality of interfaces  
-Independent deployment of components  
-Intermediary components to reduce latency, enforce security and encapsulate legacy systems`  
+`Scalability of component interactions`  
+`Generality of interfaces`  
+`Independent deployment of components`  
+`Intermediary components to reduce latency, enforce security and encapsulate legacy systems` 
+###4.Rest对于我们来说
+`Every Things is a Resource.` 
+`Every Resouce has a ID.` 
+`We Can Use Http Meothod(Get/Post/Put/Delete) Handle Resource.`
