--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -24,6 +24,34 @@ REST几个关键点
 `Independent deployment of components`  
 `Intermediary components to reduce latency, enforce security and encapsulate legacy systems` 
 ###4.Rest对于我们来说
-`Every Things is a Resource.` 
-`Every Resouce has a ID.` 
+`Every Things is a Resource.`   
+`Every Resouce has a ID.`   
 `We Can Use Http Meothod(Get/Post/Put/Delete) Handle Resource.`
+
+Spring实现
+----------
+
+###1.Controller
+`
+	@Controller
+	@RequestMapping(value = "/rest", method = RequestMethod.GET)
+	public class RestController {
+
+	@Autowired
+	UserService userService;
+
+	@RequestMapping(value = "/user/{id}", method = RequestMethod.GET)
+	public UserInfo show(@PathVariable int id, HttpServletRequest request,
+			HttpServletResponse response) throws Exception {
+		return userService.getUserInfo(id);
+
+	}
+
+	@RequestMapping(value = "/user/list", method = RequestMethod.GET)
+	public ListBean getAll() throws Exception {
+		return userService.getAllUsers();
+
+	}
+
+}
+`
