--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -32,26 +32,25 @@ Spring实现
 ----------
 
 ###1.Controller
-`
-	@Controller
+`	@Controller
 	@RequestMapping(value = "/rest", method = RequestMethod.GET)
 	public class RestController {
 
-	@Autowired
-	UserService userService;
+		@Autowired
+		UserService userService;
 
-	@RequestMapping(value = "/user/{id}", method = RequestMethod.GET)
-	public UserInfo show(@PathVariable int id, HttpServletRequest request,
-			HttpServletResponse response) throws Exception {
-		return userService.getUserInfo(id);
+		@RequestMapping(value = "/user/{id}", method = RequestMethod.GET)
+		public UserInfo show(@PathVariable int id, HttpServletRequest request,
+				HttpServletResponse response) throws Exception {
+			return userService.getUserInfo(id);
+
+		}
+
+		@RequestMapping(value = "/user/list", method = RequestMethod.GET)
+		public ListBean getAll() throws Exception {
+			return userService.getAllUsers();
+
+		}
 
 	}
-
-	@RequestMapping(value = "/user/list", method = RequestMethod.GET)
-	public ListBean getAll() throws Exception {
-		return userService.getAllUsers();
-
-	}
-
-}
 `
