--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -32,7 +32,9 @@ Spring实现
 ----------
 
 ###1.Controller
-`	@Controller
+
+`	
+	@Controller
 	@RequestMapping(value = "/rest", method = RequestMethod.GET)
 	public class RestController {
 
