--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -55,3 +55,36 @@ Spring实现
 
 	}
 增删改查分别修改"method "以对应Http的四种方法(Post,Delete,Put,Get)就好了.变量直接通过@PathVariable 就可以拿到.
+
+###2.web.xml配置
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/rest-servlet.xml</param-value>
+	</context-param>
+	<filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<servlet>  
+		<!-- 配置一个Servlet，有这个Servlet统一调度页面的请求 -->  
+		<servlet-name>rest</servlet-name>  
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>  
+		<load-on-startup>2</load-on-startup>  
+	</servlet>  
+	<servlet-mapping>  
+        <!-- 映射路径，不要写成了/*那样会拦截所有的访问，连JSP页面都访问不了 -->  
+		<servlet-name>rest</servlet-name>  
+		<url-pattern>/</url-pattern>  
+	</servlet-mapping>  
+
