--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -88,3 +88,64 @@ Spring实现
 		<url-pattern>/</url-pattern>  
 	</servlet-mapping>  
 
+###3.rest-servlet.xml配置
+	<!--检测注解-->  
+	<context:component-scan base-package="com.taoye" />  
+	<bean   class="org.springframework.web.servlet.mvc.annotation.DefaultAnnotationHandlerMapping" />  
+	<bean class="org.springframework.web.servlet.mvc.annotation.AnnotationMethodHandlerAdapter" />  
+
+	<bean id="dateFormat" class="java.text.SimpleDateFormat">
+		<constructor-arg value="yyyy-MM-dd" />
+	</bean>
+
+	<bean name="defaultUserBean" class="com.taoye.dto.UserInfo">
+		<property name="userName" value="匿名"></property>
+		<property name="salary" value="1000.00"></property>
+		<property name="vip" value="false"></property>
+		<property name="id" value="-1"></property>
+		<property name="birthday">
+			<bean factory-bean="dateFormat" factory-method="parse">
+				<constructor-arg value="2016-06-16" />
+			</bean>
+		</property>
+	</bean>
+	<bean
+		class="org.springframework.web.servlet.view.ContentNegotiatingViewResolver">
+		<property name="order" value="1" />
+		<property name="favorParameter" value="false" />
+		<property name="ignoreAcceptHeader" value="true" />
+		<property name="defaultContentType" value="text/html" />
+		<property name="mediaTypes">
+			<map>
+				<entry key="xml" value="application/xml" />
+			</map>
+		</property>
+		<property name="viewResolvers">
+			<list>
+				<bean class="org.springframework.web.servlet.view.BeanNameViewResolver" />
+				<bean
+					class="org.springframework.web.servlet.view.InternalResourceViewResolver">
+					<property name="prefix" value="/" />
+					<property name="suffix" value=".jsp" />
+				</bean>
+			</list>
+		</property>
+		<property name="defaultViews">
+			<list>
+				<bean id="xmlView"
+					class="org.springframework.web.servlet.view.xml.MarshallingView">
+					<constructor-arg>
+						<bean class="org.springframework.oxm.jaxb.Jaxb2Marshaller">
+							<property name="classesToBeBound">
+								<list>
+									<value>com.taoye.dto.UserInfo</value>
+									<value>com.taoye.dto.ListBean</value>
+								</list>
+							</property>
+						</bean>
+					</constructor-arg>
+				</bean>
+			</list>
+		</property>
+	</bean>
+
