--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -89,15 +89,16 @@ Spring实现
 	</servlet-mapping>  
 
 ###3.rest-servlet.xml配置
-	<!--检测注解-->  
+	<!-- 扫描包 -->
 	<context:component-scan base-package="com.taoye" />  
+	<!--注解驱动 激活@RequestMapping annotation-->  
 	<bean   class="org.springframework.web.servlet.mvc.annotation.DefaultAnnotationHandlerMapping" />  
 	<bean class="org.springframework.web.servlet.mvc.annotation.AnnotationMethodHandlerAdapter" />  
 
 	<bean id="dateFormat" class="java.text.SimpleDateFormat">
 		<constructor-arg value="yyyy-MM-dd" />
 	</bean>
-
+	<!--由Spring注入的默认用户对象DefaultUserInfo-->
 	<bean name="defaultUserBean" class="com.taoye.dto.UserInfo">
 		<property name="userName" value="匿名"></property>
 		<property name="salary" value="1000.00"></property>
@@ -109,6 +110,7 @@ Spring实现
 			</bean>
 		</property>
 	</bean>
+	<!-- 视图解析 -->
 	<bean
 		class="org.springframework.web.servlet.view.ContentNegotiatingViewResolver">
 		<property name="order" value="1" />
@@ -122,6 +124,7 @@ Spring实现
 		</property>
 		<property name="viewResolvers">
 			<list>
+				
 				<bean class="org.springframework.web.servlet.view.BeanNameViewResolver" />
 				<bean
 					class="org.springframework.web.servlet.view.InternalResourceViewResolver">
