--- a/13302010041_叶韬.md
+++ b/13302010041_叶韬.md
@@ -141,3 +141,6 @@ Spring实现
 	</bean>
 
 ###4.简单示例运行结果
+![image](https://github.com/taoyeyt/adwebHW2/1.png)  
+![image](https://github.com/taoyeyt/adwebHW2/2.png)  
+![image](https://github.com/taoyeyt/adwebHW2/3.png)  
